# parques_backend

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
app/: main.py
app/api/routers/: game_routes.py
app/core/: config.py  dependencies.py  enums.py
app/models/: schemas.py
app/models/domain/: board.py  game.py  piece.py  player.py  square.py
app/repositories/: base_repository.py  game_repository.py  game_repositoryimpl.py
app/rules/: dice.py  move_validator.py
app/services/: game_service.py
tests/integration/: test_api.py
tests/unit/: test_rules.py  test_services.py
ws/: config.py  game.py  manager.py  websocket_api_doc.md
ws/actions/gameActions/: create_game.py  start_game.py
ws/actions/playerActions/: burn_piece.py  move_piece.py  roll_dice.py
