[project]
name = "parques_backend"
version = "0.1.0"
description = "Backend para el juego de Parqués Distribuido"
authors = [
    {name = "SD dream team", email = "jose.duarte@utp.edu.co"},
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "python-dotenv",
    "websockets",
    "pydantic_settings",
]
requires-python = ">=3.8"

[project.optional-dependencies] 
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "mypy",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
# Indica a Hatchling que el paquete principal a incluir en el wheel
# es el contenido del directorio 'app'.
packages = ["app"]


[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "UP", "N", "C4", "B", "A", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.8" # Ajusta según tu requires-python
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.uv]
# default-groups = ["dev"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

